Pagina de post - Tailwind

--- a/Desenvolvimento Front-End/src/output.css
+++ b/Desenvolvimento Front-End/src/output.css
@@ -8,8 +8,11 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-600: oklch(57.7% 0.245 27.325);
+    --color-red-800: oklch(44.4% 0.177 26.899);
     --color-amber-50: oklch(98.7% 0.022 95.277);
     --color-amber-500: oklch(76.9% 0.188 70.08);
+    --color-amber-950: oklch(27.9% 0.077 45.635);
+    --color-blue-400: oklch(70.7% 0.165 254.624);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-800: oklch(27.8% 0.033 256.848);
@@ -36,6 +39,7 @@
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
+    --radius-3xl: 1.5rem;
     --radius-4xl: 2rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
@@ -195,6 +199,9 @@
   }
 }
 @layer utilities {
+  .invisible {
+    visibility: hidden;
+  }
   .absolute {
     position: absolute;
   }
@@ -207,17 +214,14 @@
   .z-10 {
     z-index: 10;
   }
+  .m-0 {
+    margin: calc(var(--spacing) * 0);
+  }
+  .m-1 {
+    margin: calc(var(--spacing) * 1);
+  }
   .m-4 {
     margin: calc(var(--spacing) * 4);
-  }
-  .m-5 {
-    margin: calc(var(--spacing) * 5);
-  }
-  .m-7 {
-    margin: calc(var(--spacing) * 7);
-  }
-  .m-8 {
-    margin: calc(var(--spacing) * 8);
   }
   .m-10 {
     margin: calc(var(--spacing) * 10);
@@ -234,14 +238,14 @@
   .my-10 {
     margin-block: calc(var(--spacing) * 10);
   }
+  .mt-0 {
+    margin-top: calc(var(--spacing) * 0);
+  }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
-  }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
   }
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
@@ -263,6 +267,9 @@
   }
   .mt-16 {
     margin-top: calc(var(--spacing) * 16);
+  }
+  .mb-0 {
+    margin-bottom: calc(var(--spacing) * 0);
   }
   .mb-1 {
     margin-bottom: calc(var(--spacing) * 1);
@@ -315,6 +322,30 @@
   .table {
     display: table;
   }
+  .h-2 {
+    height: calc(var(--spacing) * 2);
+  }
+  .h-2\.5 {
+    height: calc(var(--spacing) * 2.5);
+  }
+  .h-10 {
+    height: calc(var(--spacing) * 10);
+  }
+  .h-12 {
+    height: calc(var(--spacing) * 12);
+  }
+  .h-13 {
+    height: calc(var(--spacing) * 13);
+  }
+  .h-14 {
+    height: calc(var(--spacing) * 14);
+  }
+  .h-15 {
+    height: calc(var(--spacing) * 15);
+  }
+  .h-20 {
+    height: calc(var(--spacing) * 20);
+  }
   .h-auto {
     height: auto;
   }
@@ -327,20 +358,26 @@
   .h-screen {
     height: 100vh;
   }
-  .max-h-dvh {
-    max-height: 100dvh;
-  }
   .max-h-screen {
     max-height: 100vh;
   }
   .min-h-\[calc\(100vh-2rem\)\] {
     min-height: calc(100vh - 2rem);
   }
-  .min-h-\[calc\(100vh-4rem\)\] {
-    min-height: calc(100vh - 4rem);
+  .w-2 {
+    width: calc(var(--spacing) * 2);
   }
-  .min-h-\[calc\(100vh-8rem\)\] {
-    min-height: calc(100vh - 8rem);
+  .w-2\.5 {
+    width: calc(var(--spacing) * 2.5);
+  }
+  .w-10 {
+    width: calc(var(--spacing) * 10);
+  }
+  .w-15 {
+    width: calc(var(--spacing) * 15);
+  }
+  .w-20 {
+    width: calc(var(--spacing) * 20);
   }
   .w-100 {
     width: calc(var(--spacing) * 100);
@@ -357,9 +394,6 @@
   .w-200 {
     width: calc(var(--spacing) * 200);
   }
-  .w-\[30\%\] {
-    width: 30%;
-  }
   .w-\[300px\] {
     width: 300px;
   }
@@ -371,9 +405,6 @@
   }
   .min-w-\[25\%\] {
     min-width: 25%;
-  }
-  .min-w-\[230px\] {
-    min-width: 230px;
   }
   .flex-1 {
     flex: 1;
@@ -399,8 +430,17 @@
   .items-center {
     align-items: center;
   }
+  .items-end {
+    align-items: flex-end;
+  }
   .justify-center {
     justify-content: center;
+  }
+  .justify-end {
+    justify-content: flex-end;
+  }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
   }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
@@ -414,11 +454,32 @@
   .gap-20 {
     gap: calc(var(--spacing) * 20);
   }
+  .gap-30 {
+    gap: calc(var(--spacing) * 30);
+  }
   .gap-40 {
     gap: calc(var(--spacing) * 40);
   }
+  .gap-100 {
+    gap: calc(var(--spacing) * 100);
+  }
+  .gap-150 {
+    gap: calc(var(--spacing) * 150);
+  }
+  .gap-300 {
+    gap: calc(var(--spacing) * 300);
+  }
+  .overflow-hidden {
+    overflow: hidden;
+  }
+  .rounded-3xl {
+    border-radius: var(--radius-3xl);
+  }
   .rounded-4xl {
     border-radius: var(--radius-4xl);
+  }
+  .rounded-full {
+    border-radius: calc(infinity * 1px);
   }
   .rounded-lg {
     border-radius: var(--radius-lg);
@@ -429,9 +490,17 @@
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
+  .rounded-e-full {
+    border-start-end-radius: calc(infinity * 1px);
+    border-end-end-radius: calc(infinity * 1px);
+  }
   .rounded-t-xl {
     border-top-left-radius: var(--radius-xl);
     border-top-right-radius: var(--radius-xl);
+  }
+  .rounded-b-3xl {
+    border-bottom-right-radius: var(--radius-3xl);
+    border-bottom-left-radius: var(--radius-3xl);
   }
   .rounded-b-none {
     border-bottom-right-radius: 0;
@@ -445,6 +514,9 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-minitexto {
+    border-color: var(--color-minitexto);
+  }
   .border-textos {
     border-color: var(--color-textos);
   }
@@ -453,6 +525,15 @@
   }
   .bg-amber-50 {
     background-color: var(--color-amber-50);
+  }
+  .bg-amber-500 {
+    background-color: var(--color-amber-500);
+  }
+  .bg-amber-950 {
+    background-color: var(--color-amber-950);
+  }
+  .bg-blue-400 {
+    background-color: var(--color-blue-400);
   }
   .bg-destaque {
     background-color: var(--color-destaque);
@@ -481,8 +562,17 @@
   .p-7 {
     padding: calc(var(--spacing) * 7);
   }
-  .p-14 {
-    padding: calc(var(--spacing) * 14);
+  .p-10 {
+    padding: calc(var(--spacing) * 10);
+  }
+  .p-15 {
+    padding: calc(var(--spacing) * 15);
+  }
+  .p-20 {
+    padding: calc(var(--spacing) * 20);
+  }
+  .p-30 {
+    padding: calc(var(--spacing) * 30);
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
@@ -499,6 +589,9 @@
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
   }
+  .px-20 {
+    padding-inline: calc(var(--spacing) * 20);
+  }
   .px-30 {
     padding-inline: calc(var(--spacing) * 30);
   }
@@ -511,9 +604,6 @@
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
-  .py-3 {
-    padding-block: calc(var(--spacing) * 3);
-  }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
@@ -522,6 +612,9 @@
   }
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
+  }
+  .py-15 {
+    padding-block: calc(var(--spacing) * 15);
   }
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
@@ -581,6 +674,10 @@
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
+  .text-lg {
+    font-size: var(--text-lg);
+    line-height: var(--tw-leading, var(--text-lg--line-height));
+  }
   .text-sm {
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
@@ -588,9 +685,6 @@
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
-  }
-  .text-\[10px\] {
-    font-size: 10px;
   }
   .text-\[16px\] {
     font-size: 16px;
@@ -601,71 +695,11 @@
   .text-\[40px\] {
     font-size: 40px;
   }
-  .text-\[clamp\(0\.875rem\,1vw\,1rem\)\] {
-    font-size: clamp(0.875rem, 1vw, 1rem);
-  }
-  .text-\[clamp\(0\.875rem\,2vw\,2\.25rem\)\] {
-    font-size: clamp(0.875rem, 2vw, 2.25rem);
-  }
-  .text-\[clamp\(1rem\,0\.5vw\,1\.25rem\)\] {
-    font-size: clamp(1rem, 0.5vw, 1.25rem);
-  }
   .text-\[clamp\(1rem\,0\.5vw\,1rem\)\] {
     font-size: clamp(1rem, 0.5vw, 1rem);
   }
-  .text-\[clamp\(1rem\,0\.75vw\,1\.25rem\)\] {
-    font-size: clamp(1rem, 0.75vw, 1.25rem);
-  }
-  .text-\[clamp\(1rem\,0vw\,1\.25rem\)\] {
-    font-size: clamp(1rem, 0vw, 1.25rem);
-  }
-  .text-\[clamp\(1rem\,1\.3vw\,1\.25rem\)\] {
-    font-size: clamp(1rem, 1.3vw, 1.25rem);
-  }
-  .text-\[clamp\(1rem\,1\.4vw\,1\.25rem\)\] {
-    font-size: clamp(1rem, 1.4vw, 1.25rem);
-  }
-  .text-\[clamp\(1rem\,1\.5vw\,1\.5rem\)\] {
-    font-size: clamp(1rem, 1.5vw, 1.5rem);
-  }
-  .text-\[clamp\(1rem\,1\.5vw\,1\.25rem\)\] {
-    font-size: clamp(1rem, 1.5vw, 1.25rem);
-  }
-  .text-\[clamp\(1rem\,1\.5vw\,1rem\)\] {
-    font-size: clamp(1rem, 1.5vw, 1rem);
-  }
-  .text-\[clamp\(1rem\,1\.5vw\,2rem\)\] {
-    font-size: clamp(1rem, 1.5vw, 2rem);
-  }
-  .text-\[clamp\(1rem\,1\.5vw\,3rem\)\] {
-    font-size: clamp(1rem, 1.5vw, 3rem);
-  }
-  .text-\[clamp\(1rem\,1\.25vw\,1\.25rem\)\] {
-    font-size: clamp(1rem, 1.25vw, 1.25rem);
-  }
   .text-\[clamp\(1rem\,1\.35vw\,1\.25rem\)\] {
     font-size: clamp(1rem, 1.35vw, 1.25rem);
-  }
-  .text-\[clamp\(1rem\,1\.vw\,1\.25rem\)\] {
-    font-size: clamp(1rem, 1.vw, 1.25rem);
-  }
-  .text-\[clamp\(1rem\,1vw\,1\.5rem\)\] {
-    font-size: clamp(1rem, 1vw, 1.5rem);
-  }
-  .text-\[clamp\(1rem\,1vw\,1\.25rem\)\] {
-    font-size: clamp(1rem, 1vw, 1.25rem);
-  }
-  .text-\[clamp\(1rem\,1vw\,1rem\)\] {
-    font-size: clamp(1rem, 1vw, 1rem);
-  }
-  .text-\[clamp\(1rem\,2vw\,1rem\)\] {
-    font-size: clamp(1rem, 2vw, 1rem);
-  }
-  .text-\[clamp\(1rem\,075vw\,1\.25rem\)\] {
-    font-size: clamp(1rem, 075vw, 1.25rem);
-  }
-  .text-\[clamp\(1rem\,vw\,1rem\)\] {
-    font-size: clamp(1rem, vw, 1rem);
   }
   .text-\[clamp\(2rem\,2vw\,2\.25rem\)\] {
     font-size: clamp(2rem, 2vw, 2.25rem);
@@ -701,6 +735,9 @@
   }
   .text-red-600 {
     color: var(--color-red-600);
+  }
+  .text-red-800 {
+    color: var(--color-red-800);
   }
   .text-textos {
     color: var(--color-textos);
@@ -751,6 +788,13 @@
     &:hover {
       @media (hover: hover) {
         color: var(--color-amber-50);
+      }
+    }
+  }
+  .hover\:text-black {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-black);
       }
     }
   }
@@ -812,19 +856,9 @@
       width: 100%;
     }
   }
-  .sm\:invisible {
-    @media (width >= 40rem) {
-      visibility: hidden;
-    }
-  }
   .sm\:m-8 {
     @media (width >= 40rem) {
       margin: calc(var(--spacing) * 8);
-    }
-  }
-  .sm\:hidden {
-    @media (width >= 40rem) {
-      display: none;
     }
   }
   .min-sm\:max-lg\:rounded-t-4xl {
@@ -840,18 +874,6 @@
       @media (width < 64rem) {
         padding-top: calc(var(--spacing) * 8);
       }
-    }
-  }
-  .md\:text-lg {
-    @media (width >= 48rem) {
-      font-size: var(--text-lg);
-      line-height: var(--tw-leading, var(--text-lg--line-height));
-    }
-  }
-  .md\:text-sm {
-    @media (width >= 48rem) {
-      font-size: var(--text-sm);
-      line-height: var(--tw-leading, var(--text-sm--line-height));
     }
   }
   .lg\:mt-4 {
@@ -884,24 +906,6 @@
       flex-direction: row;
     }
   }
-  .lg\:text-lg {
-    @media (width >= 64rem) {
-      font-size: var(--text-lg);
-      line-height: var(--tw-leading, var(--text-lg--line-height));
-    }
-  }
-  .lg\:text-sm {
-    @media (width >= 64rem) {
-      font-size: var(--text-sm);
-      line-height: var(--tw-leading, var(--text-sm--line-height));
-    }
-  }
-  .lg\:text-xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-xl);
-      line-height: var(--tw-leading, var(--text-xl--line-height));
-    }
-  }
   .xl\:w-1\/3 {
     @media (width >= 80rem) {
       width: calc(1/3 * 100%);
@@ -910,12 +914,6 @@
   .xl\:px-12 {
     @media (width >= 80rem) {
       padding-inline: calc(var(--spacing) * 12);
-    }
-  }
-  .xl\:text-2xl {
-    @media (width >= 80rem) {
-      font-size: var(--text-2xl);
-      line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
 }
