Animações no Index

--- a/Desenvolvimento Front-End/src/input.css
+++ b/Desenvolvimento Front-End/src/input.css
@@ -41,3 +41,46 @@
     
 }
 
+.publique{
+    opacity: 0;  
+    transform: translateX(-100%); 
+    transition: all 1s; 
+
+}
+
+.publicado{
+    opacity: 1; 
+    filter: blur(0); 
+    transform: translateX(0); 
+    transition: all 1s;
+}
+
+.publiques{
+    opacity: 0;  
+    transform: translateX(100%); 
+    transition: all 1s; 
+
+}
+
+.publicados{
+    opacity: 1; 
+    filter: blur(0); 
+    transform: translateX(0); 
+    transition: all 1s;
+}
+
+.publiqueB{
+    opacity: 0;  
+    filter: blur(20px);
+
+    transition: all 2s; 
+
+}
+
+.publicadoB{
+    opacity: 1; 
+    filter: blur(0); 
+    transition: all 1.5s;
+}
+
+
