--- a/Desenvolvimento Front-End/src/output.css
+++ b/Desenvolvimento Front-End/src/output.css
@@ -14,7 +14,9 @@
     --color-amber-500: oklch(76.9% 0.188 70.08);
     --color-amber-600: oklch(66.6% 0.179 58.318);
     --color-amber-700: oklch(55.5% 0.163 48.998);
+    --color-amber-800: oklch(47.3% 0.137 46.201);
     --color-amber-900: oklch(41.4% 0.112 45.904);
+    --color-green-800: oklch(44.8% 0.119 151.328);
     --color-blue-200: oklch(88.2% 0.059 254.128);
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-blue-600: oklch(54.6% 0.245 262.881);
@@ -279,6 +281,9 @@
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
+  .mt-3 {
+    margin-top: calc(var(--spacing) * 3);
+  }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
@@ -312,6 +317,9 @@
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
   }
+  .mb-3 {
+    margin-bottom: calc(var(--spacing) * 3);
+  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
@@ -341,6 +349,9 @@
   }
   .ml-0 {
     margin-left: calc(var(--spacing) * 0);
+  }
+  .ml-1 {
+    margin-left: calc(var(--spacing) * 1);
   }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
@@ -553,14 +564,24 @@
     border-left-style: var(--tw-border-style);
     border-left-width: 2px;
   }
+  .border-none {
+    --tw-border-style: none;
+    border-style: none;
+  }
   .border-black {
     border-color: var(--color-black);
+  }
+  .border-destaque {
+    border-color: var(--color-destaque);
   }
   .border-gray-300 {
     border-color: var(--color-gray-300);
   }
   .border-gray-400 {
     border-color: var(--color-gray-400);
+  }
+  .border-green-800 {
+    border-color: var(--color-green-800);
   }
   .border-minitexto {
     border-color: var(--color-minitexto);
@@ -579,6 +600,9 @@
   }
   .bg-amber-600 {
     background-color: var(--color-amber-600);
+  }
+  .bg-amber-800 {
+    background-color: var(--color-amber-800);
   }
   .bg-amber-900 {
     background-color: var(--color-amber-900);
@@ -603,6 +627,9 @@
   }
   .bg-gray-200 {
     background-color: var(--color-gray-200);
+  }
+  .bg-minitexto {
+    background-color: var(--color-minitexto);
   }
   .bg-none {
     background-image: none;
@@ -882,6 +909,20 @@
     --tw-duration: 1000ms;
     transition-duration: 1000ms;
   }
+  .outline-none {
+    --tw-outline-style: none;
+    outline-style: none;
+  }
+  .not-focus\:border-destaque {
+    &:not(*:focus) {
+      border-color: var(--color-destaque);
+    }
+  }
+  .not-focus\:bg-fundo2 {
+    &:not(*:focus) {
+      background-color: var(--color-fundo2);
+    }
+  }
   .peer-checked\:block {
     &:is(:where(.peer):checked ~ *) {
       display: block;
@@ -926,6 +967,11 @@
       border-color: var(--color-blue-500);
     }
   }
+  .checked\:border-destaque {
+    &:checked {
+      border-color: var(--color-destaque);
+    }
+  }
   .checked\:bg-blue-500 {
     &:checked {
       background-color: var(--color-blue-500);
@@ -941,10 +987,31 @@
       }
     }
   }
+  .hover\:border-green-800 {
+    &:hover {
+      @media (hover: hover) {
+        border-color: var(--color-green-800);
+      }
+    }
+  }
   .hover\:bg-\[\#1bb125\] {
     &:hover {
       @media (hover: hover) {
         background-color: #1bb125;
+      }
+    }
+  }
+  .hover\:bg-destaque {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-destaque);
+      }
+    }
+  }
+  .hover\:bg-fundo2 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-fundo2);
       }
     }
   }
@@ -1008,6 +1075,11 @@
       border-color: var(--color-black);
     }
   }
+  .focus\:border-green-800 {
+    &:focus {
+      border-color: var(--color-green-800);
+    }
+  }
   .focus\:bg-destaque {
     &:focus {
       background-color: var(--color-destaque);
@@ -1016,6 +1088,11 @@
   .focus\:bg-fundo2 {
     &:focus {
       background-color: var(--color-fundo2);
+    }
+  }
+  .focus\:text-amber-50 {
+    &:focus {
+      color: var(--color-amber-50);
     }
   }
   .focus\:text-black {
